# sf_backend

./: .dockerignore  .gitattributes  .gitignore  API_DOCUMENTATION.html  API_DOCUMENTATION.md  AUTHENTICATION_GUIDE.md  AWS_BEDROCK_SETUP.md  CLERK_TOKEN_GUIDE.md  COMPLETE_WORKFLOW_GUIDE.md  DATABASE_CONNECTION_FIXES.md  Dockerfile  FASTAPI_SETUP_GUIDE.md  FRONTEND_API_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_SPEC.md  Makefile  QUICK_START_API.md  README.md  README_API_TESTING.md  SYSTEM_OVERVIEW.md  TEST_API_GUIDE.md  WORKING_SETUP.md  auth_token.txt  create_embeddings.py  debug_environment.py  docker-compose.simple.yml  docker-compose.test.yml  extract_token.html  fastapi-backend-pyproject.toml  generate_video.py  gradio_app.py  main.py  ngrok-dev.yml  ngrok.yml  openapi-generator-config.yaml  provider.py  pyproject.toml  quick_api_test.py  requirements-test.txt  requirements.txt  (+16 more)
.kiro/specs/aws-infrastructure-setup/: design.md  requirements.md  tasks.md
.kiro/specs/core-pipeline-integration/: requirements.md
.kiro/specs/enhanced-video-workflow/: design.md  requirements.md  tasks.md
.kiro/specs/fastapi-backend/: design.md  requirements.md  tasks.md
.kiro/specs/fastapi-best-practices-refactor/: design.md  requirements.md  tasks.md
docs/: ERROR_HANDLING_GUIDE.md  aws-configuration.md  aws-connectivity-summary.md  client-generation.md  user-relationship-management.md
llm_config/: README.md  configuration.py  provider_manager.py
mllm_tools/: README.md  bedrock.py  openai.py  openrouter.py  utils.py
scripts/: add_result_url_column.py  check_database_schema.py  generate_clients.py  generate_clients.sh  run_initial_migration.py  run_user_service_migration.py  setup.py  setup_aws_resources.py  test_aws_config.py  test_clients.py
src/app/: __init__.py  main.py
src/app/api/: dependencies.py  enhanced_dependencies.py  health_aws.py  user_relationships.py
src/app/core/: README.md  audit.py  auth.py  cache.py  cache_monitoring.py  circuit_breaker.py  config.py  enhanced_exception_handlers.py  enhanced_exceptions.py  exceptions.py  logger.py  middleware_pipeline.py  openapi.py  performance.py  redis.py  redis_operations.py  service_factory.py
src/app/database/: README_CONNECTION_MANAGER.md  __init__.py  connection.py  migrations.py  models.py  pydantic_models.py  queries.py  test_integration.py
src/app/interfaces/: __init__.py  base.py
src/app/middleware/: README.md  __init__.py  clerk_auth.py  compression.py  cors.py  (+3 more)
src/config/: __init__.py  aws_config.py  config.py
src/core/: code_generator.py  parse_video.py  storage_manager.py  video_orchestrator.py  video_planner.py  video_renderer.py
src/domain/: __init__.py
src/infrastructure/: __init__.py
src/rag/: rag_integration.py  vector_store.py
src/utils/: README.md  allowed_models.json  utils.py
task_generator/prompts_raw/: __init__.py
test_scripts/: test_video_generation.py
tests/: __init__.py  conftest.py  test_auth.py  test_main.py  test_repositories.py  test_repository_integration.py  test_user_utils.py
tests/api/: conftest.py  test_auth_api.py  test_files_api.py  test_jobs_api.py  test_openapi_docs.py  test_system_api.py  test_videos_api.py
tests/e2e/: test_workflows.py
(+536 files in other folders)
